# cartostrophe

./: .env.docker.example  .env.local.example  README.md  compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  dataset.json  eda.py  embeddings.py  eval_cache.json  evals.py  generate_golden.py  golden_dataset.json  main.py  nlu_engine.py  pyproject.toml  qdrant_store.py  rag.py  test_queries.py  transform_dataset.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/: AIChatPanel.tsx  Navbar.tsx  ProductCard.tsx
frontend/src/context/: AppContext.tsx
frontend/src/pages/: Cart.tsx  Landing.tsx  Products.tsx
frontend/src/services/: api.ts
