[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-openai>=1.2.1",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.4.1",
]
